--- a/tls/pom.xml
+++ b/tls/pom.xml
@@ -9,19 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rsa-keys</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.67</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.62</version>
-        </dependency>
-    </dependencies>
+    <artifactId>tls</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
